# ternary_gcc_plugin

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  MASTER_ISA.md  README.md  ROADMAP.md  SPECIFICATION.md  make_release.sh  ternary-gcc  test_cmp  test_ternary.c  test_ternary_cmp.c  test_ternary_logic  test_ternary_logic.c  test_ternary_memory
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  ENCODING.md  README.md  ROADMAP.md  SPECIFICATION.md  abi-contract-validation.md  examples.md
examples/: basic_demo  basic_demo.c  calculator.c  example1_select.c  example2_conversion.c  example3_arithmetic.c  example4_logic.c  example5_branch.c  example6_vector.c  example7_shift.c  example8_memory.c  example9_tmux.c  ternary_basic.c  vector_demo.c
include/: ternary.h  ternary_helpers.h  ternary_plugin.h  ternary_runtime.h
runtime/: ternary_runtime.c  ternary_runtime_opt.c
runtime_skeleton/: README.md  run_tnn_demo.sh  test_runtime_skeleton.c
runtime_skeleton/include/: ternary_runtime_skeleton.h
runtime_skeleton/src/: ternary_runtime_skeleton.c  ternary_tnn_demo.c
scripts/: validate_abi_contract.sh
src/: ternary_plugin.cpp
tests/: PHASE34_COVERAGE.md  benchmark.c  run_phase34_coverage.sh  run_tests.sh  test_abi.c  test_cmp  test_edge_cases.c  test_literals.c  test_logic  test_logic_helpers  test_logic_helpers.c  test_no_ternary.c  test_promotion.c  test_ternary.c  test_ternary_cmp  test_ternary_logic.c  test_ternary_memory.c  test_ternary_vector  test_ternary_vector.c  test_trace.c  test_varargs  test_varargs.c
tools/: check_helper_docs.py  quickstart.sh
